--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<nav class="navbar navbar-default make_grey no_margin navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top make_grey no_margin">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
