--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-<div class="container-fluid background_style id="top" background="images/typewriter.jpg"> 
+<div class="container-fluid id="top" background="images/typewriter.jpg"> 
 	<div class="col-md-4"></div>
 	<div class="col-md-4 header_content">
 	<h1 id="big_name">Hi, my name is Christine.</h1>
