--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 		<h4>Have any questions?</h4>
 		</div>
 		    <!-- Contact Section -->
-    <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top"><center><img src="images/mail1.gif" width="60" height="60" alt="Mountain View" class="img-responsive"></center></a>
+    <a href="mailto:xtin3__@hotmail.com?Subject=Hello%20again" target="_top"><center><img src="images/mail1.gif" width="60" height="60" alt="Mountain View" class="img-responsive"></center></a>
     <br>
     <br>
 </div>
