--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
 	<br>
 	</div>
 
-	<div class="col-md-3">
+	<div class="col-xs-6 col-md-3">
 		<img src="images/img1.jpg" alt="Mountain View" class="img-responsive">	
 	</div>
-	<div class="col-md-3">
+	<div class="col-xs-6 col-md-3">
 		<img src="images/img2.jpg" alt="Mountain View" class="img-responsive">	
 	</div>
-	<div class="col-md-3">
+	<div class="col-xs-6 col-md-3">
 		<img src="images/img3.jpg" alt="Mountain View" class="img-responsive">	
 	</div>
-	<div class="col-md-3">
+	<div class="col-xs-6 col-md-3">
 		<img src="images/img4.jpg" alt="Mountain View" class="img-responsive">	
 		<br>
 		<br>
