--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="stylesheets/styles.css">
 	<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Amatica+SC|Arapey|Arima+Madurai|Cormorant+SC|News+Cycle|Pacifico|Playfair+Display+SC|Quattrocento+Sans|Scope+One" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Amatica+SC" rel="stylesheet">
 </head>
 
 <body>
@@ -47,6 +47,7 @@
 	<div class="col-md-4 header_content">
 	<h1 id="big_name">Hi, my name is Christine.</h1>
 	<h2> . . . . . </h2>
+	<br>
 	<h3>Welcome to my webpage.</h3></div>
 	<div class="col-md-4"></div>
 </div>
@@ -55,6 +56,7 @@
 <div class="container-fluid background_one" id="about"> 
 	<div class="col-md-12 center_text"><h1>About Me</h1>
 	<h3> . . . . . </h3> </div>
+	<br>
 	<div class="col-md-12 center_text">
 		<p>I did my first degree in biotechnology and I'm currently doing a second degree in computer science.
 		<br>I made this website to learn HTML and CSS. 
@@ -69,6 +71,7 @@
 <div class="container-fluid" id="projects"> 
 	<div class="col-md-12 center_text"><h1>My Projects</h1>
 	<h3> . . . . . </h3>
+	<br>
 	<h4>Coming soon</h4>
 	<br>
 	</div>
