--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
 	<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Amatica+SC" rel="stylesheet">
+	
+	<script>
+    	$(document).ready(function(){
+      	$(window).scroll(function() { // check if scroll event happened
+        	if ($(document).scrollTop() > 50) { // check if user scrolled more than 50 from top of the browser window
+          	$(".navbar-fixed-top").css("background-color", "#f8f8f8"); // if yes, then change the color of class "navbar-fixed-top" to white (#f8f8f8)
+        	} else {
+          	$(".navbar-fixed-top").css("background-color", "transparent"); // if not, change it back to transparent
+        	}
+      	});
+    	});
+	</script>
 </head>
 
 <body>
