--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     	$(document).ready(function(){
       	$(window).scroll(function() { // check if scroll event happened
         	if ($(document).scrollTop() > 50) { // check if user scrolled more than 50 from top of the browser window
-          	$(".navbar-fixed-top").css("background-color", "#f8f8f8"); // if yes, then change the color of class "navbar-fixed-top" to white (#f8f8f8)
+          	$(".make_grey").css("background-color", "#2f4a45"); // if yes, then change the color of class "navbar-fixed-top" to white (#f8f8f8)
         	} else {
-          	$(".navbar-fixed-top").css("background-color", "transparent"); // if not, change it back to transparent
+          	$(".make_grey").css("background-color", "transparent"); // if not, change it back to transparent
         	}
       	});
     	});
