--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	<script>
     	$(document).ready(function(){
       	$(window).scroll(function() { // check if scroll event happened
-        	if ($(document).scrollTop() > 50) { // check if user scrolled more than 50 from top of the browser window
-          	$(".make_grey").css("background-color", "#2f4a45"); // if yes, then change the color of class "navbar-fixed-top" to white (#f8f8f8)
+        	if ($(document).scrollTop() > 100) { // check if user scrolled more than 50 from top of the browser window
+          	$(".nav_colour").css("background-color", "#2f4a45"); // if yes, then change the color of class "navbar-fixed-top" to white (#f8f8f8)
         	} else {
-          	$(".make_grey").css("background-color", "transparent"); // if not, change it back to transparent
+          	$(".nav_colour").css("background-color", "transparent"); // if not, change it back to transparent
         	}
       	});
     	});
