--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
 
-<nav class="navbar navbar-default navbar-fixed-top make_grey no_margin">
+<nav class="navbar navbar-default navbar-fixed-top nav_colour no_margin">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
