--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	<h3> . . . . . </h3> </div>
 	<br>
 	<div class="col-md-12 center_text">
-		<p>I did my first degree in biotechnology and I'm currently doing a second degree in computer science.
+		<p>I completed my first degree in biotechnology and I'm currently pursuing a second degree in computer science.
 		<br>I made this website to learn HTML and CSS. 
 		<br>Theres nothing much right now, but hopefully in the future I will be able to share my projects with you.</p>
 		<center><img src="images/about.gif" width="60" height="60" alt="Mountain View" class="img-responsive"></center>
