--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-<div class="container-fluid background_style" id="top"> 
+<div class="container-fluid background_image" id="top"> 
 	<div class="col-md-4"></div>
 	<div class="col-md-4 header_content">
 	<h1 id="big_name">Hi, my name is Christine.</h1>
@@ -66,7 +66,7 @@
 </div>
 
 
-<div class="container-fluid background_one" id="about"> 
+<div class="container-fluid background_teal" id="about"> 
 	<div class="col-md-12 center_text"><h2>About Me</h2>
 	<h3> . . . . . </h3> </div>
 	<br>
@@ -81,7 +81,7 @@
 </div>
 
 
-<div class="container-fluid" id="projects"> 
+<div class="container-fluid background_white" id="projects"> 
 	<div class="col-md-12 center_text"><h2>My Projects</h2>
 	<h3> . . . . . </h3>
 	<br>
@@ -106,7 +106,7 @@
 </div>
 
 
-<div class="container-fluid background_one" id="contact"> 
+<div class="container-fluid background_teal" id="contact"> 
 	<div class="col-md-12 center_text"><h2>Contact Me</h2>
 	<h3> . . . . . </h3>
 	</div>
@@ -120,7 +120,7 @@
     <br>
 </div>
 
-<div class="container-fluid background_grey"> 
+<div class="container-fluid background_darkgreen"> 
 	<br>
 	<br>
 	<br>
