--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <div class="container-fluid background_image" id="top"> 
 	<div class="col-md-4"></div>
 	<div class="col-md-4 header_content">
-	<h1 id="nav_colour">Hi, my name is Christine.</h1>
+	<h1 id="white_font">Hi, my name is Christine.</h1>
 	<h2> . . . . . </h2>
 	<br>
 	<h3>Welcome to my webpage.</h3></div>
