--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
 	</div>
 
 	<div class="col-md-3">
+		<a href="space_shooter/space_shooter.html">
 		<img src="images/img1.jpg" alt="Mountain View" class="img-responsive">	
+		</a>
 	</div>
 	<div class="col-md-3">
 		<img src="images/img2.jpg" alt="Mountain View" class="img-responsive">	
