--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 	</div>
 
 	<div class="col-md-3">
-		<a href="/Space_Shooter/space_shooter.html">
+		<a href="test.html">
 		<img src="images/img1.jpg" alt="Mountain View" class="img-responsive">	
 		</a>
 	</div>
