--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
 		</a>
 	</div>
 	<div class="col-md-3">
-		<img src="images/img2.jpg" alt="Mountain View" class="img-responsive">	
+		<a href="marioShooter.html">
+		<img src="images/img2.jpg" alt="Mountain View" class="img-responsive">
+		</a>
 	</div>
 	<div class="col-md-3">
 		<img src="images/img3.jpg" alt="Mountain View" class="img-responsive">	
