--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 	<div class="col-md-12 center_text"><h2>My Projects</h2>
 	<h3> . . . . . </h3>
 	<br>
+	<!--
 	<h4>Coming soon</h4>
 	<br>
 	</div>
@@ -107,6 +108,12 @@
 		<img src="images/img4.jpg" alt="Mountain View" class="img-responsive">	
 		<br>
 		<br>
+	</div> -->
+	
+	<div class="col-md-3">
+		<a href="marioshooter.html">
+		<img src="images/project1.png" alt="Mountain View" class="img-responsive">
+		</a>
 	</div>
 </div>
 
