--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
 	<div class="col-md-12 center_text"><h2>My Projects</h2>
 	<h3> . . . . . </h3>
 	<br>
-	<!--
-	<h4>Coming soon</h4>
+	
+	<h4>More coming soon</h4>
 	<br>
 	</div>
-
+	<!--
 	<div class="col-md-3">
 		<a href="space_shooter.html"> 
 		<img src="images/img1.jpg" alt="Mountain View" class="img-responsive">	
