--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 		<br>
 	</div> -->
 	
-	<div class="col-md-3">
+	<div class="col-md-3 center">
 		<a href="marioshooter.html">
 		<img src="images/project1.png" alt="Mountain View" class="img-responsive">
 		</a>
