--- a/index.html
+++ b/index.html
@@ -93,17 +93,17 @@
 	
 	<div class="col-md-3 center">
 		<a href="marioshooter.html">
-		<img src="images/project1.png" alt="Mountain View" class="img-responsive">
+		<img src="images/project1.png" alt="Mountain View" class="img-responsive projectimg">
 		</a>
 	</div>
 	<div class="col-md-3">
-		<img src="images/img2.jpg" alt="Mountain View" class="img-responsive">
+		<img src="images/img2.jpg" alt="Mountain View" class="img-responsive projectimg">
 	</div>
 	<div class="col-md-3">
-		<img src="images/img3.jpg" alt="Mountain View" class="img-responsive">	
+		<img src="images/img3.jpg" alt="Mountain View" class="img-responsive projectimg">	
 	</div>
 	<div class="col-md-3">
-		<img src="images/img4.jpg" alt="Mountain View" class="img-responsive">	
+		<img src="images/img4.jpg" alt="Mountain View" class="img-responsive projectimg">	
 		<br>
 		<br>
 	</div> 
