--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
 		</a>
 	</div>
 	<div class="col-md-3">
+		<a href="art.html">
 		<img src="images/img2.jpg" alt="Mountain View" class="img-responsive projectimg">
+		</a>
 	</div>
 	<div class="col-md-3">
 		<img src="images/img3.jpg" alt="Mountain View" class="img-responsive projectimg">	
