--- a/art.html
+++ b/art.html
@@ -4,7 +4,7 @@
 	<title>My portfolio</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<!-- THE FOLLOWING LINK REFERENCES A STYLESHEET FROM A FOLDER THAT THIS CURRENT HTML FILE IS IN -->
-	<link rel="stylesheet" href="stylesheets/styles.css">
+	<link rel="artstylesheet" href="stylesheets/styles.css">
 	<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Amatica+SC" rel="stylesheet">
