--- a/art.html
+++ b/art.html
@@ -14,7 +14,7 @@
     	$(document).ready(function(){
       		$(window).scroll(function() { // check if scroll event happened
         		if ($(document).scrollTop() > 300) { // check if user scrolled more than 50 from top of the browser window
-          			$(".nav_colour").css("background-color", "#2f4a45"); // if yes, then change the color of class "navbar-fixed-top" to white (#f8f8f8)
+          			$(".nav_colour").css("background-color", "#cda4c6"); // if yes, then change the color of class "navbar-fixed-top" to white (#f8f8f8)
         		} else {
           			$(".nav_colour").css("background-color", "transparent"); // if not, change it back to transparent
         		}
@@ -58,11 +58,8 @@
 
 <div class="container-fluid background_image" id="top"> 
 	<div class="col-md-4"></div>
-	<div class="col-md-4 header_content">
-	<h1 id="white_font">Hi, my name is Christine.</h1>
-	<h2> . . . . . </h2>
-	<br>
-	<h3>Welcome to my webpage.</h3></div>
+	<div class="col-md-4 header_content"></div>
+
 	<div class="col-md-4"></div>
 </div>
 
@@ -89,26 +86,10 @@
 	
 	<h4>More projects coming soon</h4>
 	<br>
-	</div>
 	
-	<div class="col-md-3 center">
-		<a href="marioshooter.html">
-		<img src="images/project1.png" alt="Mountain View" class="img-responsive projectimg">
-		</a>
-	</div>
-	<div class="col-md-3">
-		<img src="images/img2.jpg" alt="Mountain View" class="img-responsive projectimg">
-	</div>
-	<div class="col-md-3">
-		<img src="images/img3.jpg" alt="Mountain View" class="img-responsive projectimg">	
-	</div>
-	<div class="col-md-3">
-		<img src="images/img4.jpg" alt="Mountain View" class="img-responsive projectimg">	
-		<br>
-		<br>
-	</div> 
 	<br>
 	<br>
+	</div>
 </div>
 
 
