--- a/art.html
+++ b/art.html
@@ -14,7 +14,7 @@
     	$(document).ready(function(){
       		$(window).scroll(function() { // check if scroll event happened
         		if ($(document).scrollTop() > 300) { // check if user scrolled more than 50 from top of the browser window
-          			$(".nav_colour").css("background-color", "#cda4c6")
+          			$(".nav_colour").css("background-color", "#cda4c6");
 				$(".nav_colour").css("color", "white"); // if yes, then change the color of class "navbar-fixed-top" to white (#f8f8f8)
         		} else {
           			$(".nav_colour").css("background-color", "transparent"); // if not, change it back to transparent
