--- a/art.html
+++ b/art.html
@@ -65,15 +65,7 @@
 
 
 <div class="container-fluid background_teal" id="about"> 
-	<div class="col-md-12 center_text"><h2>About Me</h2>
-	<h3> . . . . . </h3> </div>
-	<br>
-	<div class="col-md-12 center_text">
-		<p>I completed my first degree in biotechnology and I'm currently pursuing a second degree in computer science.
-		<br>I made this website to learn HTML and CSS. 
-		<br>Theres nothing much right now, but hopefully in the future I will be able to share my projects with you.</p>
-		<center><img src="images/about.gif" width="60" height="60" alt="Mountain View" class="img-responsive"></center>
-		<br>
+	<div class="col-md-12 center_text"><h2></h2>
 		<br>
 	</div>
 </div>
@@ -93,24 +85,5 @@
 </div>
 
 
-<div class="container-fluid background_teal" id="contact"> 
-	<div class="col-md-12 center_text"><h2>Contact Me</h2>
-	<h3> . . . . . </h3>
-	</div>
-
-	<div class="col-md-12 center_text">
-		<h4>Have any questions?</h4>
-	</div>
-		    <!-- Contact Section -->
-    	<a href="mailto:xtin3__@hotmail.com?Subject=Hello%20again" target="_top"><center><img src="images/mail1.gif" width="60" height="60" alt="Mountain View" class="img-responsive"></center></a>
-	<br>
-	<br>
-</div>
-
-<div class="container-fluid background_darkgreen"> 
-	<br>
-	<br>
-	<br>
-</div>
 
 </body>
