--- a/art.html
+++ b/art.html
@@ -56,7 +56,8 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-<div class="container-fluid background_image" id="top"> 
+<div class="container-fluid" id="top"> 
+	<img src="stylesheet/banner6.png" class="background_image" />
 	<div class="col-md-4"></div>
 	<div class="col-md-4 header_content"></div>
 
