--- a/art.html
+++ b/art.html
@@ -57,7 +57,7 @@
 </nav>
 
 <div class="container-fluid" id="top"> 
-	<img src="stylesheet/banner6.png" class="background_image" />
+	<img src="stylesheets/banner6.png" class="background_image" />
 	<div class="col-md-4"></div>
 	<div class="col-md-4 header_content"></div>
 
