--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 <header>
 <div class="container-fluid background_image" id="top"> 
 	<div class="intro">
-                <div class="subheading">My name is Christine</div>
-                <div class="heading">It's Nice To Meet You</div>
+                <div class="subheading">It's Nice To Meet You</div>
+                <div class="heading">My name is Christine</div>
     </div>
 </div>
 </header>
@@ -124,7 +124,7 @@
     <a href="https://www.instagram.com/keurisutine/"><img src="images/instagram2.png" height="42" width="42"></img></a>
     &#160;
     &#160;
-    <a href="https://www.instagram.com/keurisutine/"><img src="images/linkedin2.png" height="42" width="42"></img></a>
+    <a href="https://www.linkedin.com/in/christine-sam-2073617b"><img src="images/linkedin2.png" height="42" width="42"></img></a>
     </div>
 
 </div>
