--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 </section>
 
 <!-- Footer -->
-    <footer>
+    <footer class="background_purple">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
