--- a/index.html
+++ b/index.html
@@ -84,14 +84,11 @@
     <img src="images/user.png" height="42" width="42"></img>
 	</div>
 	<br>
-	<div class="col-md-12 center_text">
-    <br>
-		<p>I completed my first degree in biotechnology and I'm currently pursuing a second degree in computer science.
-		<br>I made this website to learn HTML and CSS. 
-		<br>Theres nothing much right now, but hopefully in the future I will be able to share my projects with you.</p>
-		<br>
-		<br>
+	<div class="col-md-3 center_text"></div>
+	<div class="col-md-6 center_text">
+    	<p>After completing my degree in biotechnology, I realized life science was just not my passion. I decided to do another degree in computer science based on my love for problem solving and designing. I'm currently in my 4th year of a second degree program in computer science. I enjoy the challenge of writing code to solve challenging problems. I also love to draw and make crafts in my spare time.</p>
 	</div>
+	<div class="col-md-3 center_text"></div>
 </div>
 </section>
 
@@ -105,10 +102,12 @@
     <div class="col-md-4 center_text">
     <img src="images/smartphone.png" height="42" width="42"></img>
     <h4>Starry Starry Night</h4>
+    <p> Starry Starry Night is a simple 2D Android game built using Unity's game development platform. Using the phones built in accelerometer, the player must move their boat to catch all the falling stars. </p>
     </div>
     <div class="col-md-4 center_text">
     <img src="images/placeholder.png" height="42" width="42"></img>
     <h4>Mind the Gap</h4>
+    <p>Mind the gap is an Android Application that maps the locations of stop and tube lines on the London Underground transit system. It also parses JSON files to retrieve real time arrival information of stops. </p>
     </div>
     <div class="col-md-2 center_text"></div>
 	</div>
