--- a/index.html
+++ b/index.html
@@ -81,11 +81,12 @@
 <section id="aboutsection" class="background_purple">
 <div class="container-fluid" id="about"> 
 	<div class="col-md-12 center_text"><h2>ABOUT ME</h2>
-    <img src="images/user.png" height="42" width="42" style="padding-bottom: 10px;"></img>
+    <img src="images/user.png" height="42" width="42"></img>
 	</div>
 	<br>
 	<div class="col-md-3 center_text"></div>
 	<div class="col-md-6 center_text">
+        <br>
     	<p>After completing my bachelors degree in biotechnology, I realized I was just not passionate enough about life sciences. I decided to do another bachelors degree in computer science based on my love for problem solving and designing. I'm currently in my 4th year of a second degree program in computer science. I enjoy the challenge of writing code to solve challenging problems. I also love to draw and make crafts in my spare time.</p>
 	</div>
 	<div class="col-md-3 center_text"></div>
