--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<div class="col-md-3 center_text"></div>
 	<div class="col-md-6 center_text">
         <br>
-    	<p>After completing my bachelors degree in biotechnology, I realized I was just not passionate enough about life sciences. I decided to do another bachelors degree in computer science based on my love for problem solving and designing. I'm currently in my 4th year of a second degree program in computer science. I enjoy the challenge of writing code to solve challenging problems. I also love to draw and make crafts in my spare time.</p>
+    	<p>After completing my bachelors degree in biotechnology, I realized I was just not passionate enough about life sciences. I decided to do another bachelors degree in computer science based on my love for problem solving and designing. I'm currently a 4th year student of a second degree program in computer science. I enjoy the challenge of writing code to solve challenging problems. I also love to draw and make crafts in my spare time.</p>
 	</div>
 	<div class="col-md-3 center_text"></div>
 </div>
