--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 <!-- Contact Section -->
 <section id="contactsection" class="background_darkpurple">
 <div class="container-fluid" id="contact"> 
-    <div class="col-md-12 center_text"><h2>SOCIAL</h2>
+    <div class="col-md-12 social center_text"><h2>SOCIAL</h2>
     <br>
     <a href="https://www.instagram.com/keurisutine/"><img src="images/instagram2.png" height="42" width="42"></img></a>
     &#160;
