--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <div class="container-fluid" id="contact"> 
     <div class="col-md-12 social center_text"><h2>SOCIAL</h2>
     <br>
-    <a href="https://www.instagram.com/keurisutine/"><img src="images/instagram2.png" height="42" width="42"></img></a>
+    <a href="https://www.instagram.com/keurisutine/"><img src="images/instagram2.png" height="42" width="42" opacity="0.5"></img></a>
     &#160;
     &#160;
     <a href="https://www.linkedin.com/in/christine-sam-2073617b"><img src="images/linkedin2.png" height="42" width="42"></img></a>
