--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Volunteer</a>
+            <a class="nav-link js-scroll-trigger" href="#volunteer">Volunteer</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
@@ -261,7 +261,7 @@ common cancer mutations</li>
         </div>
       </section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="volunteer">
         <div class="my-auto">
           <h2 class="mb-5">Volunteer Experience</h2>
 
