updated experience and projects

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Christine Sam</span>
+        <span class="d-block d-lg-none">Menu</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
         </span>
@@ -51,6 +51,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#projects">Technical Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#volunteer">Volunteer</a>
@@ -104,16 +107,19 @@
               <ul class="fa-ul mb-0">
                 <li>
                   <i class="fa-li fa fa-chevron-right"></i>
-                  Implemented improvements to a web-based recommendation engine</li>
+                  Developed the front and back end of a web-based recommendation engine using HTML, CSS, JavaScript, and PHP</li>
                   <li>
                     <i class="fa-li fa fa-chevron-right"></i>
-                    Performed feature improvements and bug fixes on existing PC applications</li>
+                    Performed feature improvements and bug fixes on existing PC applications written in C#</li>
                     <li>
                       <i class="fa-li fa fa-chevron-right"></i>
-                      Participated in code reviews and documented software changes</li>
+                      Designed and created a database in MySQL to store machine log data</li>
                       <li>
                         <i class="fa-li fa fa-chevron-right"></i>
-                        Worked as part of an agile development team of 15 members</li>
+                        Worked as part of an agile development team of 15 members and participated regularly in code reviews</li>
+                        <li>
+                          <i class="fa-li fa fa-chevron-right"></i>
+                          Used Git for version control and Jira for project tracking</li>
               </ul>
             </div>
             <div class="resume-date text-md-right">
@@ -128,10 +134,13 @@
               <ul class="fa-ul mb-0">
                 <li>
                   <i class="fa-li fa fa-chevron-right"></i>
-                  Added new functionality to existing webpages of the company websites</li>
+                  Improved the usability and appearance to the front end of ASP.NET web pages</li>
                   <li>
                     <i class="fa-li fa fa-chevron-right"></i>
-                    Updated SQL databases to include new product information</li>
+                    Added new functionality and performed bug fixes to the back end of the web pages in C#</li>
+                    <li>
+                      <i class="fa-li fa fa-chevron-right"></i>
+                      Updated a Microsoft SQL Server databases to include new product information</li>
                     <li>
                       <i class="fa-li fa fa-chevron-right"></i>
                       Used in silico analysis techniques to study changes in kinase-substrate specificities due to
@@ -258,6 +267,100 @@ common cancer mutations</li>
               <i class="fa-li fa fa-chevron-right"></i>
               Agile Development &amp; Scrum</li>
           </ul>
+        </div>
+      </section>
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
+        <div class="my-auto">
+          <h2 class="mb-5">Technical Projects</h2>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">InsightUBC Web Application</h3>
+              <div class="subheading mb-3">(Academic: Software Engineering Course)</div>
+              <ul class="fa-ul mb-0">
+                <li>
+                  <i class="fa-li fa fa-chevron-right"></i>
+                  Designed and developed parts of a full stack web application that allows users to perform queries on room and course information from the UBC campus</li>
+                  <li>
+                    <i class="fa-li fa fa-chevron-right"></i>
+                    Parsed JSON and htm files into internal data structures and cached the data onto disk</li>
+                    <li>
+                      <i class="fa-li fa fa-chevron-right"></i>
+                      Wrote a simple query engine that returns the results to a query given that the query matches the required EBNF</li>
+                    <li>
+                      <i class="fa-li fa fa-chevron-right"></i>
+                      Wrote unit and integration tests to ensure that all specifications are met</li>
+                      <li>
+                        <i class="fa-li fa fa-chevron-right"></i>
+                        <strong>Technologies:</strong> TypeScript, Node.js, Mocha Test Environment</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">UBC Amenities App</h3>
+              <div class="subheading mb-3">(Personal)</div>
+              <ul class="fa-ul mb-0">
+                <li>
+                  <i class="fa-li fa fa-chevron-right"></i>
+                  Designed and developed an Android application to locate common amenities at UBC</li>
+                  <li>
+                    <i class="fa-li fa fa-chevron-right"></i>
+                    Used the Google Maps Android API to display the map of UBC, markers and info windows</li>
+                    <li>
+                      <i class="fa-li fa fa-chevron-right"></i>
+                      Incorporated a side navigational drawer that allows users to select amenities to display</li>
+                      <li>
+                        <i class="fa-li fa fa-chevron-right"></i>
+                        <strong>Technologies:</strong> Java</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Starry Night Unity Game</h3>
+              <div class="subheading mb-3">(Personal)</div>
+              <ul class="fa-ul mb-0">
+                <li>
+                  <i class="fa-li fa fa-chevron-right"></i>
+                  Designed and developed a 2D Android game using Unity’s development platform</li>
+                  <li>
+                    <i class="fa-li fa fa-chevron-right"></i>
+                    Wrote C# scripts that controlled the player object movement and the spawning and movement of collectible objects</li>
+                    <li>
+                      <i class="fa-li fa fa-chevron-right"></i>
+                      Created graphics for the game using Adobe Photoshop</li>
+                      <li>
+                        <i class="fa-li fa fa-chevron-right"></i>
+                        <strong>Technologies:</strong> C#</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Mind the Gap Android Application</h3>
+              <div class="subheading mb-3">(Academic: Software Construction Course)</div>
+              <ul class="fa-ul mb-0">
+                <li>
+                  <i class="fa-li fa fa-chevron-right"></i>
+                  Implemented and tested parts of an application that mapped locations of stops and tube lines on the London Underground transit system</li>
+                  <li>
+                    <i class="fa-li fa fa-chevron-right"></i>
+                    Parsed JSON files to retrieve real time arrival information of stops</li>
+                    <li>
+                      <i class="fa-li fa fa-chevron-right"></i>
+                      Configured a machine to allow for Android application development using device emulators</li>
+                      <li>
+                        <i class="fa-li fa fa-chevron-right"></i>
+                        <strong>Technologies:</strong> Java, JUnit Test Framework</li>
+              </ul>
+            </div>
+          </div>
+
         </div>
       </section>
 
