--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </h1>
           <div class="subheading mb-5">Vancouver BC
           </div>
-          <p class="mb-5">I'm currently a 4th year student of a second degree program in computer science. I'm passionate in the area data mining and machine learning.</p>
+          <p class="mb-5">I'm a software developer from Vancouver BC who loves to build great products.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/christine-sam-2073617b/">
@@ -100,6 +100,16 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
           <h2 class="mb-5">Experience</h2>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Junior Software Developer</h3>
+              <div class="subheading mb-3">Equinox Software Design</div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">May 2018 - Present</span>
+            </div>
+          </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
